added notebook for extrapolating results

--- a/carbonFootprintResults.ipynb
+++ b/carbonFootprintResults.ipynb
@@ -2,15 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f41da915",
+   "execution_count": 2,
+   "id": "fb4c3d2c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "0ff28a71",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PATH = \"results/\""
+   ]
   },
   {
    "cell_type": "markdown",
-   "id": "3e49641d",
+   "id": "b9b41a54",
    "metadata": {},
    "source": [
     "# Kaggle Competition"
@@ -18,38 +30,37 @@
   },
   {
    "cell_type": "markdown",
-   "id": "16f67c42",
+   "id": "38a3f83f",
    "metadata": {},
    "source": [
-    "## Pipeline1: Pretraining\n",
-    "\n",
-    "Using config file: cait_pretraining job.126331.out\n",
-    "Actual consumption for 1 epoch(s):\n",
-    "        Time:   8:00:33\n",
-    "        Energy: 2.800010 kWh\n",
-    "        CO2eq:  299.601022 g\n",
-    "        This is equivalent to:\n",
-    "        2.786986 km travelled by car\n",
-    "CarbonTracker:\n",
-    "Predicted consumption for 5 epoch(s):\n",
-    "        Time:   40:02:47\n",
-    "        Energy: 14.000048 kWh\n",
-    "        CO2eq:  1126.210028 g\n",
-    "        This is equivalent to:\n",
-    "        10.476372 km travelled by car"
+    "## Pipeline1: Pretraining"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "69b9224b",
+   "execution_count": 27,
+   "id": "7776407c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "pretrain_1_file = PATH+\"siim_pretrain_results_1epoch.csv\"\n",
+    "pretrain_full_file = PATH+\"siim_pretrain_results_full.csv\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "095fcae0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ptrain_1 = pd.read_csv(pretrain_1_file)\n",
+    "ptrain_full = pd.read_csv(pretrain_full_file)"
+   ]
   },
   {
    "cell_type": "markdown",
-   "id": "eb6ec6db",
+   "id": "a6c5c825",
    "metadata": {},
    "source": [
     "## Pipeline1: Training"
@@ -57,24 +68,84 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 30,
+   "id": "315e59f6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_1_file = PATH+\"siim_train_results_1epoch.csv\"\n",
+    "train_full_file = PATH+\"siim_train_results_full.csv\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "b3e34b5a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_1 = pd.read_csv(train_1_file)\n",
+    "train_full = pd.read_csv(train_full_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "3b2dd549",
+   "id": "b798e569",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "id": "960ef396",
+   "metadata": {},
+   "source": [
+    "# RevisitingTransfer"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bdbf3e17",
+   "metadata": {},
+   "source": [
+    "## Base: ImageNet Freeze=False"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5dd426e7",
+   "execution_count": 32,
+   "id": "c8fdf15c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "rt_frz_false_file = PATH+\"rt_imagenet_frzfalse_results.csv\"\n",
+    "rt_frz_false = pd.read_csv(rt_frz_false_file)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b7ed06d5",
+   "metadata": {},
+   "source": [
+    "## Base: ImageNet Freeze=True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "b01944da",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rt_frz_true_file = PATH+\"rt_imagenet_frztrue_results.csv\"\n",
+    "rt_frz_true = pd.read_csv(rt_frz_true_file)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "825eab38",
+   "id": "34250bfe",
    "metadata": {},
    "outputs": [],
    "source": []
