pushing minor changes from notebook

--- a/carbonFootprintResults.ipynb
+++ b/carbonFootprintResults.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "d98da077",
+   "id": "89c11f7c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "a300a435",
+   "id": "569b30d8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dcb39d76",
+   "id": "89cbffa6",
    "metadata": {},
    "source": [
     "# Kaggle Competition"
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6764bb21",
+   "id": "ff78274a",
    "metadata": {},
    "source": [
     "## Pipeline1: Pretraining"
@@ -38,8 +38,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "id": "bbb3adf7",
+   "execution_count": 50,
+   "id": "492362bd",
    "metadata": {},
    "outputs": [
     {
@@ -111,20 +111,38 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>l2_pretraining</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>n_cf2_pretraining</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      training_file      time  energy(kWh)    CO2eq(g)  distance(km)\n",
-       "0  cait_pretraining   8:00:33     2.800010  299.601022      2.786986\n",
-       "1    f1_pretraining  11:55:04     4.303103  218.651446      2.033967\n",
-       "2    f3_pretraining  22:14:23     8.025735  229.189462      2.131995\n",
-       "3    l1_pretraining       NaN          NaN         NaN           NaN\n",
-       "4   l1b_pretraining       NaN          NaN         NaN           NaN"
+       "       training_file      time  energy(kWh)    CO2eq(g)  distance(km)\n",
+       "0   cait_pretraining   8:00:33     2.800010  299.601022      2.786986\n",
+       "1     f1_pretraining  11:55:04     4.303103  218.651446      2.033967\n",
+       "2     f3_pretraining  22:14:23     8.025735  229.189462      2.131995\n",
+       "3     l1_pretraining       NaN          NaN         NaN           NaN\n",
+       "4    l1b_pretraining       NaN          NaN         NaN           NaN\n",
+       "5     l2_pretraining       NaN          NaN         NaN           NaN\n",
+       "6  n_cf2_pretraining       NaN          NaN         NaN           NaN"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,13 +153,13 @@
     "pretrain_1_file = PATH+\"siim_pretrain_results_1epoch.csv\"\n",
     "ptrain_1 = pd.read_csv(pretrain_1_file)\n",
     "\n",
-    "ptrain_1.head()"
+    "ptrain_1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "id": "43665366",
+   "execution_count": 49,
+   "id": "f75269b7",
    "metadata": {},
    "outputs": [
     {
@@ -213,20 +231,38 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>l2_pretraining</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>n_cf2_pretraining</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      training_file       time  energy(kWh)     CO2eq(g)  distance(km)\n",
-       "0  cait_pretraining   40:02:47    14.000048  1126.210028     10.476372\n",
-       "1    f1_pretraining   59:35:21    21.515517  1024.948272      9.534403\n",
-       "2    f3_pretraining  111:11:54    40.128676  1194.298670     11.109755\n",
-       "3    l1_pretraining        NaN          NaN          NaN           NaN\n",
-       "4   l1b_pretraining        NaN          NaN          NaN           NaN"
+       "       training_file       time  energy(kWh)     CO2eq(g)  distance(km)\n",
+       "0   cait_pretraining   40:02:47    14.000048  1126.210028     10.476372\n",
+       "1     f1_pretraining   59:35:21    21.515517  1024.948272      9.534403\n",
+       "2     f3_pretraining  111:11:54    40.128676  1194.298670     11.109755\n",
+       "3     l1_pretraining        NaN          NaN          NaN           NaN\n",
+       "4    l1b_pretraining        NaN          NaN          NaN           NaN\n",
+       "5     l2_pretraining        NaN          NaN          NaN           NaN\n",
+       "6  n_cf2_pretraining        NaN          NaN          NaN           NaN"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,12 +272,12 @@
     "pretrain_full_file = PATH+\"siim_pretrain_results_full.csv\"\n",
     "ptrain_full = pd.read_csv(pretrain_full_file)\n",
     "\n",
-    "ptrain_full.head()"
+    "ptrain_full"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "84ee4093",
+   "id": "f244fdeb",
    "metadata": {},
    "source": [
     "## Pipeline1: Training"
@@ -249,8 +285,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "id": "63c4a63e",
+   "execution_count": 47,
+   "id": "ddc29938",
    "metadata": {},
    "outputs": [
     {
@@ -322,6 +358,22 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>n_cf11_6</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>n_cf11_7</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -332,10 +384,12 @@
        "1      n_cf11_1  7:33:10     0.578794  25.746986      0.239507\n",
        "2      n_cf11_9  1:24:16     0.189512  10.865354      0.101073\n",
        "3     n_cf11_10  1:50:25     0.231844   8.607216      0.080067\n",
-       "4   n_cf11_rot1      NaN          NaN        NaN           NaN"
+       "4   n_cf11_rot1      NaN          NaN        NaN           NaN\n",
+       "5      n_cf11_6      NaN          NaN        NaN           NaN\n",
+       "6      n_cf11_7      NaN          NaN        NaN           NaN"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -346,13 +400,13 @@
     "train_1_file = PATH+\"siim_train_results_1epoch.csv\"\n",
     "train_1 = pd.read_csv(train_1_file)\n",
     "\n",
-    "train_1.head()"
+    "train_1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
-   "id": "832bca8a",
+   "execution_count": 48,
+   "id": "771d2f2a",
    "metadata": {},
    "outputs": [
     {
@@ -424,6 +478,22 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>n_cf11_6</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>n_cf11_7</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -434,10 +504,12 @@
        "1      n_cf11_1  37:45:51     2.893969  168.435306      1.566840\n",
        "2      n_cf11_9   7:01:21     0.947560   50.139455      0.466414\n",
        "3     n_cf11_10   9:12:03     1.159221   34.338704      0.319430\n",
-       "4   n_cf11_rot1       NaN          NaN         NaN           NaN"
+       "4   n_cf11_rot1       NaN          NaN         NaN           NaN\n",
+       "5      n_cf11_6       NaN          NaN         NaN           NaN\n",
+       "6      n_cf11_7       NaN          NaN         NaN           NaN"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -447,12 +519,12 @@
     "train_full_file = PATH+\"siim_train_results_full.csv\"\n",
     "train_full = pd.read_csv(train_full_file)\n",
     "\n",
-    "train_full.head()"
+    "train_full"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "0b0c8039",
+   "id": "d28f3ace",
    "metadata": {},
    "source": [
     "# RevisitingTransfer"
@@ -460,7 +532,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "097e7873",
+   "id": "c571cf48",
    "metadata": {},
    "source": [
     "## Base: ImageNet Freeze=False"
@@ -469,7 +541,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "378f7d94",
+   "id": "ceaea69a",
    "metadata": {},
    "outputs": [
     {
@@ -591,7 +663,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "833ed70c",
+   "id": "671b678d",
    "metadata": {},
    "source": [
     "## Base: ImageNet Freeze=True"
@@ -600,7 +672,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "d6036524",
+   "id": "b92743b8",
    "metadata": {},
    "outputs": [
     {
@@ -716,7 +788,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d8d2d39d",
+   "id": "4acf4860",
    "metadata": {},
    "outputs": [],
    "source": []
