wrote meta statistics to csv so we can work more easily

--- a/meta_data_exploration.ipynb
+++ b/meta_data_exploration.ipynb
@@ -803,35 +803,27 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "e6569f38",
+   "id": "5582af21",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "count       108.000000\n",
-       "mean      15575.370370\n",
-       "std       19993.616981\n",
-       "min          27.000000\n",
-       "25%        1703.000000\n",
-       "50%        7184.000000\n",
-       "75%       21066.500000\n",
-       "max      101845.000000\n",
-       "Name: TotalSubmissions, dtype: float64"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "image.TotalSubmissions.describe()"
+    "image = image[['CompetitionId', 'Title', 'HostSegmentTitle', 'OnlyAllowKernelSubmissions', 'RewardQuantity', 'TotalTeams',  'TotalSubmissions' ]]\n",
+    "image['subs_per_team'] = image.TotalSubmissions/image.TotalTeams"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
+   "id": "e6569f38",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image.describe().to_csv('meta_data/meta/all_image_descriptives.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "id": "f98f2b22",
    "metadata": {},
    "outputs": [
@@ -856,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "fee10653",
    "metadata": {},
    "outputs": [
@@ -874,7 +866,7 @@
        "Name: TotalSubmissions, dtype: float64"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -885,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "7a2746de",
    "metadata": {},
    "outputs": [
@@ -903,7 +895,7 @@
        "Name: TotalSubmissions, dtype: float64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -914,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "e404ec40",
    "metadata": {},
    "outputs": [
@@ -924,7 +916,7 @@
        "0.3333333333333333"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -935,7 +927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "1c16bcbb",
    "metadata": {},
    "outputs": [],
@@ -945,7 +937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "7cd406a6",
    "metadata": {},
    "outputs": [
@@ -971,19 +963,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "7145dbed",
    "metadata": {},
    "outputs": [],
    "source": [
-    "ccomps = image[image.OnlyAllowKernelSubmissions].copy().reset_index(drop=True)"
+    "ccomps = image[image.OnlyAllowKernelSubmissions].copy().reset_index(drop=True)\n",
+    "ccomps = ccomps[['CompetitionId', 'Title', 'HostSegmentTitle', 'RewardQuantity', 'TotalTeams', 'TotalSubmissions', 'subs_per_team', ]]\n",
+    "ccomps.to_csv('meta_data/meta/image_code_comps.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
-   "id": "9ebad194",
+   "execution_count": 21,
+   "id": "743174a1",
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "desc = ccomps.describe()\n",
+    "desc.to_csv('meta_data/meta/image_code_descriptives.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "9ebad194",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1004,7 +1011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "id": "f5bcbdf8",
    "metadata": {},
    "outputs": [
@@ -1027,7 +1034,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "id": "6abfeded",
    "metadata": {},
    "outputs": [
@@ -1050,7 +1057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "id": "91df92cc",
    "metadata": {},
    "outputs": [
@@ -1378,7 +1385,7 @@
        "1                767         442       1.735294             0.0"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1389,7 +1396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "id": "4c4a6fd7",
    "metadata": {},
    "outputs": [
@@ -1407,7 +1414,7 @@
        "Name: TotalSubmissions, dtype: float64"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1418,7 +1425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "id": "875caf19",
    "metadata": {},
    "outputs": [
@@ -1441,7 +1448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "id": "69bca217",
    "metadata": {},
    "outputs": [
@@ -1459,7 +1466,7 @@
        "Name: subs_per_team, dtype: float64"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1470,7 +1477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 30,
    "id": "1c28cec0",
    "metadata": {},
    "outputs": [
@@ -1493,7 +1500,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "id": "c520ac56",
    "metadata": {},
    "outputs": [
@@ -1511,7 +1518,7 @@
        "Name: TotalTeams, dtype: float64"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1522,7 +1529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 32,
    "id": "9ab6db16",
    "metadata": {},
    "outputs": [
@@ -1575,7 +1582,7 @@
        "3       20.90359         18000.0  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1586,7 +1593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 33,
    "id": "8a6cd695",
    "metadata": {},
    "outputs": [
@@ -1639,7 +1646,7 @@
        "1             0.0  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1650,7 +1657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 34,
    "id": "c474ea9a",
    "metadata": {},
    "outputs": [
@@ -1703,7 +1710,7 @@
        "30      33.674894         60000.0  "
       ]
      },
-     "execution_count": 31,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1714,7 +1721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 35,
    "id": "443144bc",
    "metadata": {},
    "outputs": [
@@ -1767,7 +1774,7 @@
        "1             0.0  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1778,7 +1785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 36,
    "id": "462962fd",
    "metadata": {},
    "outputs": [
@@ -1822,7 +1829,7 @@
        "23        1305             32307"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1833,18 +1840,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 37,
    "id": "174d8beb",
    "metadata": {},
    "outputs": [],
    "source": [
     "subs['SubmissionId'] = subs['Id'] #rename and reduce this table\n",
-    "subs = subs[['SubmissionId', 'TeamId', 'SourceKernelVersionId', 'SubmissionDate', 'IsAfterDeadline','PublicScoreLeaderboardDisplay','PrivateScoreLeaderboardDisplay']]"
+    "subs = subs[['SubmissionId', 'TeamId', 'SourceKernelVersionId', 'SubmissionDate', 'IsAfterDeadline','PublicScoreLeaderboardDisplay','PrivateScoreLeaderboardDisplay']]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 41,
    "id": "a30c33c6",
    "metadata": {},
    "outputs": [],
@@ -1854,7 +1861,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 42,
    "id": "d066037c",
    "metadata": {},
    "outputs": [],
@@ -1864,7 +1871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 46,
    "id": "693671bd",
    "metadata": {},
    "outputs": [
@@ -1872,30 +1879,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "32307\n"
+      "32307\n",
+      "1305\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "1305"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "#isolated all submissions belonging to the SIIM.... competition\n",
     "finalSiim = hope[(hope.TeamLeaderId.isna()==False) & (hope.IsAfterDeadline==False) & (hope.LastSubmissionDate.isna()==False)].copy()\n",
     "print(finalSiim.shape[0]) #32307 submissions, which bloody matches finally!! Woot!\n",
-    "len(finalSiim.TeamId.unique()) #1307 teams, which matches expected"
+    "print(len(finalSiim.TeamId.unique())) #1307 teams, which matches expected\n",
+    "finalSiim.to_csv('meta_data/meta/SIIM_only_submissions.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 44,
    "id": "d186183d",
    "metadata": {},
    "outputs": [
@@ -1926,7 +1925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 45,
    "id": "bf406131",
    "metadata": {},
    "outputs": [
@@ -1956,6 +1955,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "5aafa468",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bffd4d06",
    "metadata": {},
    "outputs": [],
    "source": []
