adding final results for the whole competition

--- a/carbonFootprintResults.ipynb
+++ b/carbonFootprintResults.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "04a0e092",
+   "id": "fb7263e3",
    "metadata": {},
    "source": [
     "# Computing the Carbon Footprint of a Kaggle Competition"
@@ -589,7 +589,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "35e38f2c",
+   "id": "879d28ab",
    "metadata": {},
    "source": [
     "## Calculating Our Carbon Footprint"
@@ -598,7 +598,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "75845691",
+   "id": "de1c2a43",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -637,7 +637,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "14eac442",
+   "id": "d8cb3b5f",
    "metadata": {},
    "outputs": [
     {
@@ -695,13 +695,14 @@
     }
    ],
    "source": [
-    "# Carbon footprint of 1 epoch\n",
+    "# Carbon footprint of 1 epoch \n",
+    "# NEED TO ADD IN THE CORRECT NUMBER OF TIMES WE RAN EACH STAGE\n",
     "calc_footprint(ptrain_1, train_1, 1, 1)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "5740e814",
+   "id": "f0ae9099",
    "metadata": {},
    "source": [
     "# Calculating Team 2's Carbon Footprint"
@@ -710,7 +711,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "bce8e93a",
+   "id": "028e002d",
    "metadata": {},
    "outputs": [
     {
@@ -771,6 +772,26 @@
     "# Carbon footprint of the full training, \n",
     "team2_totals = calc_footprint(ptrain_full, train_full, 1, 1)\n",
     "team2_totals"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "id": "5a6ab1b0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Team 2's CO2 total usage (not including pipeline2): 8323.03g\n",
+      "Team 2's distance total (not including pipeline2): 77.42km\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"Team 2's CO2 total usage (not including pipeline2): {round(team2_totals['CO2eq(g)'].sum(),2)}g\")\n",
+    "print(f\"Team 2's distance total (not including pipeline2): {round(team2_totals['distance(km)'].sum(),2)}km\")"
    ]
   },
   {
@@ -914,7 +935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 121,
    "id": "6c44a399",
    "metadata": {},
    "outputs": [
@@ -948,32 +969,32 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>isic</td>\n",
-       "      <td>120.219371</td>\n",
-       "      <td>1.118321</td>\n",
+       "      <td>120.219</td>\n",
+       "      <td>1.118</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>breast</td>\n",
-       "      <td>12.571887</td>\n",
-       "      <td>0.116949</td>\n",
+       "      <td>12.572</td>\n",
+       "      <td>0.117</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>chest</td>\n",
-       "      <td>36.428464</td>\n",
-       "      <td>0.338868</td>\n",
+       "      <td>36.428</td>\n",
+       "      <td>0.339</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>knee</td>\n",
-       "      <td>18.384465</td>\n",
-       "      <td>0.171017</td>\n",
+       "      <td>18.384</td>\n",
+       "      <td>0.171</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>thyroid</td>\n",
-       "      <td>1.749398</td>\n",
-       "      <td>0.016274</td>\n",
+       "      <td>1.749</td>\n",
+       "      <td>0.016</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -981,14 +1002,14 @@
       ],
       "text/plain": [
        "   dataset  total_CO2eq(g)  total_distance(km)\n",
-       "0     isic      120.219371            1.118321\n",
-       "1   breast       12.571887            0.116949\n",
-       "2    chest       36.428464            0.338868\n",
-       "3     knee       18.384465            0.171017\n",
-       "4  thyroid        1.749398            0.016274"
+       "0     isic         120.219               1.118\n",
+       "1   breast          12.572               0.117\n",
+       "2    chest          36.428               0.339\n",
+       "3     knee          18.384               0.171\n",
+       "4  thyroid           1.749               0.016"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 121,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1005,6 +1026,7 @@
     "rt_frz_false[\"total_CO2eq(g)\"] = rt_frz_false[\"CO2eq(g)/e\"] * rt_frz_false[\"total_epochs\"]\n",
     "rt_frz_false[\"total_distance(km)\"] = rt_frz_false[\"distance(km)/e\"] * rt_frz_false[\"total_epochs\"]\n",
     "\n",
+    "rt_frz_false[[\"total_CO2eq(g)\",\"total_distance(km)\"]] = rt_frz_false[[\"total_CO2eq(g)\",\"total_distance(km)\"]].round(3)\n",
     "rt_frz_false[[\"dataset\",\"total_CO2eq(g)\",\"total_distance(km)\"]]"
    ]
   },
@@ -1149,8 +1171,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
-   "id": "06cb357e",
+   "execution_count": 120,
+   "id": "5bc23cf8",
    "metadata": {},
    "outputs": [
     {
@@ -1183,32 +1205,32 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>isic</td>\n",
-       "      <td>7.601426</td>\n",
-       "      <td>0.070711</td>\n",
+       "      <td>7.601</td>\n",
+       "      <td>0.071</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>breast</td>\n",
-       "      <td>5.053898</td>\n",
-       "      <td>0.047012</td>\n",
+       "      <td>5.054</td>\n",
+       "      <td>0.047</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>chest</td>\n",
-       "      <td>13.116521</td>\n",
-       "      <td>0.122014</td>\n",
+       "      <td>13.117</td>\n",
+       "      <td>0.122</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>knee</td>\n",
-       "      <td>4.784432</td>\n",
-       "      <td>0.044507</td>\n",
+       "      <td>4.784</td>\n",
+       "      <td>0.045</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>thyroid</td>\n",
-       "      <td>1.582602</td>\n",
-       "      <td>0.014722</td>\n",
+       "      <td>1.583</td>\n",
+       "      <td>0.015</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1216,14 +1238,14 @@
       ],
       "text/plain": [
        "   dataset  total_CO2eq(g)  total_distance(km)\n",
-       "0     isic        7.601426            0.070711\n",
-       "1   breast        5.053898            0.047012\n",
-       "2    chest       13.116521            0.122014\n",
-       "3     knee        4.784432            0.044507\n",
-       "4  thyroid        1.582602            0.014722"
+       "0     isic           7.601               0.071\n",
+       "1   breast           5.054               0.047\n",
+       "2    chest          13.117               0.122\n",
+       "3     knee           4.784               0.045\n",
+       "4  thyroid           1.583               0.015"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 120,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1240,12 +1262,14 @@
     "rt_frz_true[\"total_CO2eq(g)\"] = rt_frz_true[\"CO2eq(g)/e\"] * rt_frz_true[\"total_epochs\"]\n",
     "rt_frz_true[\"total_distance(km)\"] = rt_frz_true[\"distance(km)/e\"] * rt_frz_true[\"total_epochs\"]\n",
     "\n",
-    "rt_frz_true[[\"dataset\",\"total_CO2eq(g)\",\"total_distance(km)\"]]"
+    "rt_frz_true[[\"total_CO2eq(g)\",\"total_distance(km)\"]] = rt_frz_true[[\"total_CO2eq(g)\",\"total_distance(km)\"]].round(3)\n",
+    "\n",
+    "rt_frz_true[[\"dataset\",\"total_CO2eq(g)\",\"total_distance(km)\"]]\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "ef6e3c26",
+   "id": "f1fc75ee",
    "metadata": {},
    "source": [
     "# Average Cost to Train a Single Model"
@@ -1254,7 +1278,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "6f20f5d1",
+   "id": "44d848f5",
    "metadata": {},
    "outputs": [
     {
@@ -1275,7 +1299,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "6cdf31af",
+   "id": "ed191d3b",
    "metadata": {},
    "outputs": [
     {
@@ -1294,7 +1318,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8d7b5d8f",
+   "id": "9d521cfc",
    "metadata": {},
    "source": [
     "# Carbon Footprint of the Whole Competition\n",
@@ -1305,7 +1329,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "85e634c3",
+   "id": "f274bcbc",
    "metadata": {},
    "outputs": [
     {
@@ -1325,7 +1349,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "6764bc18",
+   "id": "cea08edb",
    "metadata": {},
    "outputs": [
     {
@@ -1343,7 +1367,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "521bef3c",
+   "id": "a488510a",
    "metadata": {},
    "outputs": [
     {
@@ -1356,13 +1380,13 @@
    ],
    "source": [
     "whole_comp_dist = total_entries * dist_cost_per_model\n",
-    "print(f\"The estimated carbon footprint of the whole competition in distance driven {round(whole_comp_dist,2)}km\")"
+    "print(f\"The estimated carbon footprint of the whole competition in distance driven {round(whole_comp_dist,2)} km\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aa3db9f4",
+   "id": "d7796ba6",
    "metadata": {},
    "outputs": [],
    "source": []
