--- a/carbonFootprintResults.ipynb
+++ b/carbonFootprintResults.ipynb
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 6,
    "id": "24e41da9",
    "metadata": {},
    "outputs": [],
@@ -56,12 +56,12 @@
     "pretrain_1_file = PATH+\"siim_pretrain_results_1epoch.csv\"\n",
     "ptrain_1 = pd.read_csv(pretrain_1_file)\n",
     "\n",
-    "#ptrain"
+    "#ptrain_1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 7,
    "id": "6642ae59",
    "metadata": {},
    "outputs": [
@@ -121,34 +121,34 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>l1_pretraining</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>5.042949</td>\n",
-       "      <td>249.147310</td>\n",
-       "      <td>2.317649</td>\n",
+       "      <td>11:25:01</td>\n",
+       "      <td>2.749729</td>\n",
+       "      <td>167.122448</td>\n",
+       "      <td>1.554627</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>l1b_pretraining</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>5.042949</td>\n",
-       "      <td>249.147310</td>\n",
-       "      <td>2.317649</td>\n",
+       "      <td>11:06:12</td>\n",
+       "      <td>2.648516</td>\n",
+       "      <td>69.744261</td>\n",
+       "      <td>0.648784</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>l2_pretraining</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>5.042949</td>\n",
-       "      <td>249.147310</td>\n",
-       "      <td>2.317649</td>\n",
+       "      <td>4.105419</td>\n",
+       "      <td>196.861728</td>\n",
+       "      <td>1.831272</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>n_cf2_pretraining</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>5.042949</td>\n",
-       "      <td>249.147310</td>\n",
-       "      <td>2.317649</td>\n",
+       "      <td>4.105419</td>\n",
+       "      <td>196.861728</td>\n",
+       "      <td>1.831272</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -159,13 +159,13 @@
        "0   cait_pretraining   8:00:33     2.800010  299.601022      2.786986\n",
        "1     f1_pretraining  11:55:04     4.303103  218.651446      2.033967\n",
        "2     f3_pretraining  22:14:23     8.025735  229.189462      2.131995\n",
-       "3     l1_pretraining       NaN     5.042949  249.147310      2.317649\n",
-       "4    l1b_pretraining       NaN     5.042949  249.147310      2.317649\n",
-       "5     l2_pretraining       NaN     5.042949  249.147310      2.317649\n",
-       "6  n_cf2_pretraining       NaN     5.042949  249.147310      2.317649"
+       "3     l1_pretraining  11:25:01     2.749729  167.122448      1.554627\n",
+       "4    l1b_pretraining  11:06:12     2.648516   69.744261      0.648784\n",
+       "5     l2_pretraining       NaN     4.105419  196.861728      1.831272\n",
+       "6  n_cf2_pretraining       NaN     4.105419  196.861728      1.831272"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 9,
    "id": "22bde282",
    "metadata": {},
    "outputs": [],
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 10,
    "id": "fcc3fe21",
    "metadata": {},
    "outputs": [
@@ -255,34 +255,34 @@
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>l1_pretraining</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>25.214747</td>\n",
-       "      <td>1115.152323</td>\n",
-       "      <td>10.373510</td>\n",
+       "      <td>57:05:03</td>\n",
+       "      <td>13.748647</td>\n",
+       "      <td>631.333879</td>\n",
+       "      <td>5.872873</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>l1b_pretraining</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>25.214747</td>\n",
-       "      <td>1115.152323</td>\n",
-       "      <td>10.373510</td>\n",
+       "      <td>55:31:01</td>\n",
+       "      <td>13.242581</td>\n",
+       "      <td>334.029285</td>\n",
+       "      <td>3.107249</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
        "      <td>l2_pretraining</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>25.214747</td>\n",
-       "      <td>1115.152323</td>\n",
-       "      <td>10.373510</td>\n",
+       "      <td>20.527094</td>\n",
+       "      <td>862.164027</td>\n",
+       "      <td>8.020130</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
        "      <td>n_cf2_pretraining</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>25.214747</td>\n",
-       "      <td>1115.152323</td>\n",
-       "      <td>10.373510</td>\n",
+       "      <td>20.527094</td>\n",
+       "      <td>862.164027</td>\n",
+       "      <td>8.020130</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -293,13 +293,13 @@
        "0   cait_pretraining   40:02:47    14.000048  1126.210028     10.476372\n",
        "1     f1_pretraining   59:35:21    21.515517  1024.948272      9.534403\n",
        "2     f3_pretraining  111:11:54    40.128676  1194.298670     11.109755\n",
-       "3     l1_pretraining        NaN    25.214747  1115.152323     10.373510\n",
-       "4    l1b_pretraining        NaN    25.214747  1115.152323     10.373510\n",
-       "5     l2_pretraining        NaN    25.214747  1115.152323     10.373510\n",
-       "6  n_cf2_pretraining        NaN    25.214747  1115.152323     10.373510"
+       "3     l1_pretraining   57:05:03    13.748647   631.333879      5.872873\n",
+       "4    l1b_pretraining   55:31:01    13.242581   334.029285      3.107249\n",
+       "5     l2_pretraining        NaN    20.527094   862.164027      8.020130\n",
+       "6  n_cf2_pretraining        NaN    20.527094   862.164027      8.020130"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 11,
    "id": "6fda2842",
    "metadata": {},
    "outputs": [],
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 12,
    "id": "e50c84e1",
    "metadata": {},
    "outputs": [
@@ -441,7 +441,7 @@
        "6      n_cf11_7      NaN     0.298755  13.685070      0.127303"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 13,
    "id": "4abee22f",
    "metadata": {},
    "outputs": [],
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 14,
    "id": "91f0aa29",
    "metadata": {},
    "outputs": [
@@ -574,7 +574,7 @@
        "6      n_cf11_7       NaN     1.493773   73.851750      0.686993"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -597,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "de1c2a43",
    "metadata": {},
    "outputs": [],
@@ -636,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 16,
    "id": "d8cb3b5f",
    "metadata": {},
    "outputs": [
@@ -676,8 +676,8 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>ptrain</td>\n",
-       "      <td>1744.031170</td>\n",
-       "      <td>16.223545</td>\n",
+       "      <td>1378.032095</td>\n",
+       "      <td>12.818903</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -686,10 +686,10 @@
       "text/plain": [
        "    stage     CO2eq(g)  distance(km)\n",
        "1   train    95.795488      0.891121\n",
-       "0  ptrain  1744.031170     16.223545"
+       "0  ptrain  1378.032095     12.818903"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -710,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 17,
    "id": "028e002d",
    "metadata": {},
    "outputs": [
@@ -750,8 +750,8 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>ptrain</td>\n",
-       "      <td>7806.066263</td>\n",
-       "      <td>72.614570</td>\n",
+       "      <td>6035.148188</td>\n",
+       "      <td>56.140913</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -760,10 +760,10 @@
       "text/plain": [
        "    stage     CO2eq(g)  distance(km)\n",
        "1   train   516.962248      4.808953\n",
-       "0  ptrain  7806.066263     72.614570"
+       "0  ptrain  6035.148188     56.140913"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -776,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 18,
    "id": "5a6ab1b0",
    "metadata": {},
    "outputs": [
@@ -784,8 +784,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Team 2's CO2 total usage (not including pipeline2): 8323.03g\n",
-      "Team 2's distance total (not including pipeline2): 77.42km\n"
+      "Team 2's CO2 total usage (not including pipeline2): 6552.11g\n",
+      "Team 2's distance total (not including pipeline2): 60.95km\n"
      ]
     }
    ],
@@ -1291,6 +1291,9 @@
    ],
    "source": [
     "# CO2 cost\n",
+    "\n",
+    "# models trained in RT with freeze=False + models trained in RT with freeze=False + the single Kaggle project\n",
+    "# the kaggle project is actually training 14 models in pipeline1, that we had tracked\n",
     "total_models_trained = len(rt_frz_false) + len(rt_frz_true) + 1\n",
     "CO2_cost_per_model = (rt_frz_true[\"total_CO2eq(g)\"].sum() + rt_frz_false[\"total_CO2eq(g)\"].sum() + team2_totals[\"CO2eq(g)\"].sum()) / total_models_trained\n",
     "print(f\"The average cost of training a single model is {round(CO2_cost_per_model,2)}g CO2eq\")"
